# icortex

./: .gitignore  .readthedocs.yml  LICENSE.md  README.md  dodo.py  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  installation-issue.md
.github/workflows/: build.yml  python-app.yml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  learn_more.rst  quickstart.rst  reference.rst  specification.rst
docs/source/_templates/: page.html
icortex/: __init__.py  __main__.py  cli.py  config.py  context.py  defaults.py  exec.py  helper.py  init.py  install.py  kernel.json  kernel.py  magics.py  parser.py  pypi.py  run.py  var.py
icortex/api/: __init__.py  api_base.py  openai.py  textcortex.py
icortex/kernel/: __init__.py  __main__.py  app.py  install.py  kernel.json
icortex/service/: __init__.py  openai.py  service_base.py  textcortex.py
icortex/services/: __init__.py  echo.py  generation_result.py  huggingface.py  openai.py  service_base.py  service_interaction.py  textcortex.py
lite/: jupyter-lite.json  overrides.json  pyproject.toml
lite/jupyterlite-icortex/: .prettierignore  MANIFEST.in  README.md  install.json  package.json  setup.cfg  setup.py
lite/jupyterlite-icortex/src/: index.ts  kernel.ts  tokens.ts  worker.ts
tests/: test_config.py  test_parser.py
