[tool.poetry]
name = "icortex"
version = "0.1.1"
description = "Jupyter kernel that can generate Python code from natural language prompts"
authors = ["TextCortex Team <onur@textcortex.com>"]
license = "Apache"
readme = "README.md"
repository = "https://github.com/textcortex/icortex"
homepage = "https://icortex.ai/"
keywords = [
    "copilot",
    "tabnine",
    "codex",
    "openai",
    "code generation",
    "code completion",
    "generate code",
    "natural language to python",
    "icortex",
    "textcortex",
    "gpt-3",
    "codegen",
    "polycoder",
    "jupyter notebook",
    "smart jupyter notebook",
    "jupyter notebook kernel",
    "icortex kernel",
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.poetry.scripts]
icortex = "icortex.cli:main"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
toml = "^0.10.2"
requests = "^2.28.1"
# ipykernel = "^5.5.5"
ipykernel = "^6.16.0"
ipython = "^8.5.0"
entrypoints = "^0.4"
ipywidgets = "^8.0.2"
jupyter-client = "^7.4.2"
jupyter-console = "^6.4.4"
jupyter-core = "^4.11.1"
jupyterlab-widgets = "^3.0.3"
Pygments = "^2.13.0"

[tool.poetry.extras]
openai = ["openai==^0.23.1"]
huggingface = [
    "onnxruntime==^1.12.1",
    "onnx==^1.12.0",
    "optimum==^1.4.0",
    "transformers==^4.23.1",
    "torch==^1.12.1",
]

[tool.poetry.group.dev.dependencies]
Sphinx = "^5.3.0"
sphinxcontrib-video = "^0.0.1.dev3"
sphinx-copybutton = "^0.5.0"
furo = "^2022.9.29"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
