[metadata]
name = jupyterlite-icortex
description = a icortex kernel for jupyterlite
long_description = file: ./README.md
long_description_content_type = text/markdown
url = https://icortex.rtfd.io
author = TextCortex Team
author_email = onur@textcortex.com
license = BSD-3-Clause
license_file = LICENSE
project_urls =
    Bug Tracker = https://github.com/textcortex/icortex/issues
    Changelog = https://github.com/textcortex/icortex/blob/master/CHANGELOG.md
    Documentation = https://icortex.rtfd.io
    Source Code = https://github.com/textcortex/icortex
classifiers =
    Development Status :: 4 - Beta
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: BSD
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
    Topic :: Multimedia :: Graphics :: Presentation

[options]
python_requires = >=3.6
package_dir =
    = py_src

packages = find:
include_package_data = True
zip_safe = False

install_requires =
    jupyterlite >=0.1.0a18

[options.packages.find]
where =
    py_src
